--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>
-WWW ja Internet 2018
-</title>
+	<title>Title</title>
 </head>
+
 <body>
+	<h1>HeaderOne</h1>
 </body>
+
 </html>
