--- a/location.html
+++ b/location.html
@@ -2,13 +2,10 @@
 <html>
 
 <head>
-	<title>WWW&Internet2018</title>
+	<title>Location</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
-	
-</head>
-
 <body>
-	
+
 	<header>
 		<script>
 			function allowDrop(ev) {
@@ -38,31 +35,37 @@
 
 	<div id="navigation">
 		<menu>
-			<li><img src="media/buttons/homeActive.svg" class="active"></img></li>
+			<li><a href="index.html"><img class="home"></img></a></li>
 			<li><a href="video.html"><img class="media"></img></a></li>
 			<li><a href="form.html"><img class="form"></img></a></li>
-			<li><a href="location.html"><img class="location"></img></a></li>
+			<li><img src="media/buttons/locationActive.svg" class="active"></img></li>
 		</menu>
 	</div>
-	
+
 	<div id="mainblock">
-		<div id="mainText">
-			<p>
-				Welcome to this website	<br>				
-				This website was made for the WWW ja Internet course 2018 of Kajaani University of Applied Sciences.<br>
-				The site's features include:<br>
-				<ul>
-					<li>a Draggable logo inside the header.</li>
-					<li>an Awesome gameplay video on the video page.</li>
-					<li>a Form that checks if you filled any information on the form page.</li>
-					<li>a Geolocation checker that can be found on the location page.</li>
-				</ul>
-			</p>
+		<div id="locationGetter" class="box">
+			<button onclick="getLocation()">Try It</button>
+			<p id="locationOutput" style="font-family:chango; color="#1D4417;"</p>
+			
+			<script>
+				var x = document.getElementById("locationOutput");
+
+				function getLocation() {
+					if (navigator.geolocation) {
+						navigator.geolocation.getCurrentPosition(showPosition);
+					} else { 
+						x.innerHTML = "Geolocation could not be retrieved or the browser doesn't support it.";
+					}
+				}
+
+				function showPosition(position) {
+					x.innerHTML = "Latitude: " + position.coords.latitude + 
+					"<br>Longitude: " + position.coords.longitude;
+				}
+			</script>
 		</div>
-	</div>
-
+	</div>		
 </body>
-
-
-
+	
+</head>	
 </html>
