updated button logic

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 	<div id="navigation">
 		<menu>
 			<li><img src="media/buttons/homeActive.svg" class="active"></img></li>
-			<li><a href="video.html"><img class="media"></img></a></li>
+			<li><a href="video.html"><img class="buttons" src="media/buttons/video.svg" onmouseover="this.src='media/buttons/videoHover.svg';" onmouseout="this.src='media/buttons/video.svg';"></img></a></li>
+			<!--<li><a href="video.html"><img class="media"></img></a></li>-->
 			<li><a href="form.html"><img class="form"></img></a></li>
 			<li><a href="location.html"><img class="location"></img></a></li>
 		</menu>
