updated button logic to all buttons

--- a/form.html
+++ b/form.html
@@ -59,10 +59,10 @@
 
 	<div id="navigation">
 		<menu>
-			<li><a href="index.html"><img class="home"></a></li>
-			<li><a href="video.html"><img class="media"></img></a></li>
-			<li><img src="media/buttons/formActive.svg" class="active"></li>
-			<li><a href="location.html"><img class="location"></img></a></li>
+			<li><a href="index.html"><img class="buttons" src="media/buttons/home.svg" onmouseover="this.src='media/buttons/homeHover.svg';" onmouseout="this.src='media/buttons/home.svg';"></img></a></li>
+			<li><a href="video.html"><img class="buttons" src="media/buttons/video.svg" onmouseover="this.src='media/buttons/videoHover.svg';" onmouseout="this.src='media/buttons/video.svg';"></img></a></li>
+			<li><img src="media/buttons/formActive.svg" class="buttons"></li>
+			<li><a href="location.html"><img class="buttons" src="media/buttons/location.svg" onmouseover="this.src='media/buttons/locationHover.svg';" onmouseout="this.src='media/buttons/location.svg';"></img></a></li>
 		</menu>
 	</div>
 
