--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 
 	<div id="navigation">
 		<menu>
-			<li><img src="media/buttons/homeActive.svg" class="active"></img></li>
+			<li><img src="media/buttons/homeActive.svg" class="buttons"></img></li>
 			<li><a href="video.html"><img class="buttons" src="media/buttons/video.svg" onmouseover="this.src='media/buttons/videoHover.svg';" onmouseout="this.src='media/buttons/video.svg';"></img></a></li>
-			<!--<li><a href="video.html"><img class="media"></img></a></li>-->
-			<li><a href="form.html"><img class="form"></img></a></li>
-			<li><a href="location.html"><img class="location"></img></a></li>
+			<li><a href="form.html"><img class="buttons" src="media/buttons/form.svg" onmouseover="this.src='media/buttons/formHover.svg';" onmouseout="this.src='media/buttons/form.svg';"></img></a></li>
+			<li><a href="location.html"><img class="buttons" src="media/buttons/location.svg" onmouseover="this.src='media/buttons/locationHover.svg';" onmouseout="this.src='media/buttons/location.svg';"></img></a></li>
 		</menu>
 	</div>
 	
