--- a/location.html
+++ b/location.html
@@ -35,10 +35,10 @@
 
 	<div id="navigation">
 		<menu>
-			<li><a href="index.html"><img class="home"></img></a></li>
-			<li><a href="video.html"><img class="media"></img></a></li>
-			<li><a href="form.html"><img class="form"></img></a></li>
-			<li><img src="media/buttons/locationActive.svg" class="active"></img></li>
+			<li><a href="index.html"><img class="buttons" src="media/buttons/home.svg" onmouseover="this.src='media/buttons/homeHover.svg';" onmouseout="this.src='media/buttons/home.svg';"></img></a></li>
+			<li><a href="video.html"><img class="buttons" src="media/buttons/video.svg" onmouseover="this.src='media/buttons/videoHover.svg';" onmouseout="this.src='media/buttons/video.svg';"></img></a></li>
+			<li><a href="form.html"><img class="buttons" src="media/buttons/form.svg" onmouseover="this.src='media/buttons/formHover.svg';" onmouseout="this.src='media/buttons/form.svg';"></img></a></li>
+			<li><img src="media/buttons/locationActive.svg" class="buttons"></img></li>
 		</menu>
 	</div>
 
